--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "flit_core.buildapi"
 [project]
 name = "ibis-ml"
 authors = [{name = "Ibis Maintainers", email = "maintainers@ibis-project.org"}]
+readme = {file = "README.md", content-type = "text/markdown"}
 license = {file = "LICENSE"}
 classifiers = ["License :: OSI Approved :: Apache Software License"]
 dynamic = ["version", "description"]
